--- a/lewis/ml_test_blending_1122.ipynb
+++ b/lewis/ml_test_blending_1122.ipynb
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "ttf = TargetThresholdFilter(threshold=np.inf)\n",
+    "ttf = TargetThresholdFilter(threshold=45)\n",
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
@@ -164,8 +164,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
