--- a/lewis/ml_test_xgboost_1122.ipynb
+++ b/lewis/ml_test_xgboost_1122.ipynb
@@ -8,36 +8,36 @@
    },
    "outputs": [],
    "source": [
+    "# Basics\n",
+    "import sys\n",
     "import time\n",
-    "#\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "# \n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import Imputer\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "# Sklearn\n",
+    "from sklearn.preprocessing import StandardScaler, Imputer \n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.cross_validation import cross_val_score, ShuffleSplit\n",
     "from sklearn.learning_curve import learning_curve, validation_curve\n",
     "from sklearn.metrics import make_scorer\n",
-    "#\n",
+    "# xgboost\n",
     "import xgboost as xgb\n",
-    "#\n",
-    "from blending import BlendedRegressor\n",
-    "from cleaning import TargetThresholdFilter, LogPlusOne\n",
-    "#\n",
+    "# Our custom modules\n",
+    "sys.path.append('..')\n",
+    "from anrg.pipeline import Pipeline # my customized Pipeline\n",
+    "from anrg.blending import BlendedRegressor\n",
+    "from anrg.cleaning import TargetThresholdFilter, LogPlusOne\n",
+    "##### setting #######\n",
     "pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
-    "# plot plots inline\n",
-    "%matplotlib inline  "
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.3542 secs\n"
+      "Time elapsed: 0.3491 secs\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 7.0609 secs\n"
+      "Time elapsed: 6.9602 secs\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -107,17 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ttf = TargetThresholdFilter(threshold=np.inf)\n",
+    "ttf = TargetThresholdFilter(threshold=45)\n",
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=5, max_depth=5, learning_rate=0.3)\n",
+    "clf = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=5, max_depth=3, learning_rate=0.1)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
@@ -133,29 +133,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.7min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.4min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.1min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.1min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 4.3min\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 71.8min finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 43.7min finished\n"
      ]
     }
    ],
    "source": [
-    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
+    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [
     {
@@ -187,9 +212,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.1083324978 1.58245321542\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('ttf', TargetThresholdFilter(threshold=45)),\n",
+       " ('lpo', LogPlusOne()),\n",
+       " ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "      verbose=0)),\n",
+       " ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)),\n",
+       " ('clf',\n",
+       "  XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
+       "         learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
+       "         min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
+       "         objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
+       "         scale_pos_weight=1, seed=0, silent=True, subsample=1))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print np.mean(scores), np.std(scores)\n",
+    "pip.get_params()['steps']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [
     {
@@ -271,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -279,12 +344,12 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=inf)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, cols...g:linear', reg_alpha=0, reg_lambda=1,\n",
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsa...g:linear', reg_alpha=0, reg_lambda=1,\n",
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1))])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -311,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +385,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151122_102648.csv\n"
+      "../data/result_20151123_095811.csv\n"
      ]
     }
    ],
