--- a/lewis/ml_test_lasso_1123.ipynb
+++ b/lewis/ml_test_lasso_1123.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -16,8 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "# Sklearn\n",
     "from sklearn.preprocessing import StandardScaler, Imputer \n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.cross_validation import cross_val_score, ShuffleSplit\n",
@@ -59,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.3491 secs\n"
+      "Time elapsed: 0.7081 secs\n"
      ]
     }
    ],
@@ -80,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 6.9602 secs\n"
+      "Time elapsed: 11.1145 secs\n"
      ]
     }
    ],
@@ -97,12 +96,21 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(731556, 132) (731556,)\n"
+     ]
+    }
+   ],
    "source": [
     "X = trn_withRef_comb.loc[:, 'minutes_past_mean':'Kdp_5x5_90th_max']  # NOTE: used range slicing on column\n",
-    "y = trn_withRef_comb['Expected_mean']"
+    "y = trn_withRef_comb['Expected_mean']\n",
+    "print X.shape, y.shape"
    ]
   },
   {
@@ -117,7 +125,7 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=5, max_depth=3, learning_rate=0.1)\n",
+    "clf = Lasso(alpha=1.0)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
@@ -133,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -143,32 +151,32 @@
      "output_type": "stream",
      "text": [
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.7min\n",
+      "[CV] ................................ no parameters to be set -  20.4s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.6min\n",
+      "[CV] ................................ no parameters to be set -  18.7s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.4min\n",
+      "[CV] ................................ no parameters to be set -  16.6s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.6min\n",
+      "[CV] ................................ no parameters to be set -  14.5s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.6min\n",
+      "[CV] ................................ no parameters to be set -  21.6s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.2min\n",
+      "[CV] ................................ no parameters to be set -  18.5s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.1min\n",
+      "[CV] ................................ no parameters to be set -  21.5s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.2min\n",
+      "[CV] ................................ no parameters to be set -  20.1s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.1min\n",
+      "[CV] ................................ no parameters to be set -  21.0s\n",
       "[CV] no parameters to be set .........................................\n",
-      "[CV] ................................ no parameters to be set - 4.3min\n"
+      "[CV] ................................ no parameters to be set -  20.3s\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 43.7min finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  3.2min finished\n"
      ]
     }
    ],
@@ -178,7 +186,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.2664903075 1.58167881735\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', Ridge(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=None,\n",
+       "   normalize=False, random_state=None, solver='auto', tol=0.001))])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print np.mean(scores), np.std(scores)\n",
+    "pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.2664899853 1.58167932924\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', Ridge(alpha=2.0, copy_X=True, fit_intercept=True, max_iter=None,\n",
+       "   normalize=False, random_state=None, solver='auto', tol=0.001))])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print np.mean(scores), np.std(scores)\n",
+    "pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -187,144 +259,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.1870628005 1.5801378357\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 46.5min finished\n"
+      "[CV] clf__alpha=0.1 ..................................................\n",
+      "[CV] ......................................... clf__alpha=0.1 -  21.0s"
      ]
     }
    ],
    "source": [
-    "# Pipeline(steps=[\n",
-    "# ('imp', Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0))\n",
-    "# ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), \n",
-    "# ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-    "#       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-    "#       min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-    "#       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-    "#       scale_pos_weight=1, seed=0, silent=True, subsample=1))])\n",
-    "print np.mean(scores), np.std(scores)"
+    "# Sweep parameter\n",
+    "param_name, param_range='clf__alpha', [0.1, 0.5, 1, 5, 10, 50, 100]\n",
+    "train_scores, test_scores= validation_curve(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, \n",
+    "                          param_name=param_name, param_range=param_range, verbose=2)\n",
+    "train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "train_scores_std = np.std(train_scores, axis=1)\n",
+    "test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "test_scores_std = np.std(test_scores, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.1083324978 1.58245321542\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('ttf', TargetThresholdFilter(threshold=45)),\n",
-       " ('lpo', LogPlusOne()),\n",
-       " ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "      verbose=0)),\n",
-       " ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)),\n",
-       " ('clf',\n",
-       "  XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "         learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-       "         min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-       "         objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-       "         scale_pos_weight=1, seed=0, silent=True, subsample=1))]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print np.mean(scores), np.std(scores)\n",
-    "pip.get_params()['steps']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.2120059037 1.55426425433\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'clf': XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "        learning_rate=0.3, max_delta_step=0, max_depth=5,\n",
-       "        min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-       "        objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-       "        scale_pos_weight=1, seed=0, silent=True, subsample=1),\n",
-       " 'clf__base_score': 0.5,\n",
-       " 'clf__colsample_bylevel': 1,\n",
-       " 'clf__colsample_bytree': 1,\n",
-       " 'clf__gamma': 0,\n",
-       " 'clf__learning_rate': 0.3,\n",
-       " 'clf__max_delta_step': 0,\n",
-       " 'clf__max_depth': 5,\n",
-       " 'clf__min_child_weight': 1,\n",
-       " 'clf__missing': None,\n",
-       " 'clf__n_estimators': 500,\n",
-       " 'clf__nthread': 5,\n",
-       " 'clf__objective': 'reg:linear',\n",
-       " 'clf__reg_alpha': 0,\n",
-       " 'clf__reg_lambda': 1,\n",
-       " 'clf__scale_pos_weight': 1,\n",
-       " 'clf__seed': 0,\n",
-       " 'clf__silent': True,\n",
-       " 'clf__subsample': 1,\n",
-       " 'imp': Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "     verbose=0),\n",
-       " 'imp__axis': 0,\n",
-       " 'imp__copy': False,\n",
-       " 'imp__missing_values': 'NaN',\n",
-       " 'imp__strategy': 'median',\n",
-       " 'imp__verbose': 0,\n",
-       " 'lpo': LogPlusOne(),\n",
-       " 'ss': StandardScaler(copy=False, with_mean=True, with_std=True),\n",
-       " 'ss__copy': False,\n",
-       " 'ss__with_mean': True,\n",
-       " 'ss__with_std': True,\n",
-       " 'steps': [('ttf', TargetThresholdFilter(threshold=inf)),\n",
-       "  ('lpo', LogPlusOne()),\n",
-       "  ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "       verbose=0)),\n",
-       "  ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)),\n",
-       "  ('clf',\n",
-       "   XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "          learning_rate=0.3, max_delta_step=0, max_depth=5,\n",
-       "          min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-       "          objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-       "          scale_pos_weight=1, seed=0, silent=True, subsample=1))],\n",
-       " 'ttf': TargetThresholdFilter(threshold=inf),\n",
-       " 'ttf__threshold': inf}"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print np.mean(scores), np.std(scores)\n",
-    "pip.get_params()"
+    "# Plotting the validation curver, i.e. trn/val error versus parameter value\n",
+    "# Sweep alpha = [0.1, 0.5, 1, 5, 10, 50, 100]\n",
+    "# 100% data\n",
+    "print pip.get_params()['steps']\n",
+    "print param_range\n",
+    "print train_scores_mean\n",
+    "print test_scores_mean\n",
+    "plt.title(\"Validation Curve\")\n",
+    "plt.xlabel(param_name)\n",
+    "plt.ylabel(\"Score\")\n",
+    "plt.plot(param_range, train_scores_mean, label=\"Training score\", color=\"r\")\n",
+    "# plt.fill_between(param_range, train_scores_mean - train_scores_std, train_scores_mean + train_scores_std, alpha=0.2, color=\"r\")\n",
+    "plt.twinx()\n",
+    "plt.plot(param_range, test_scores_mean, label=\"Cross-validation score\", color=\"g\")\n",
+    "# plt.fill_between(param_range, test_scores_mean - test_scores_std, test_scores_mean + test_scores_std, alpha=0.2, color=\"g\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -336,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -344,12 +319,13 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsa...g:linear', reg_alpha=0, reg_lambda=1,\n",
+       "Pipeline(steps=[('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
+       "       learning_rate=0.1, max_delta_step=0, m...g:linear', reg_alpha=0, reg_lambda=1,\n",
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1))])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
@@ -376,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +361,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151123_095811.csv\n"
+      "../data/result_20151121_124706.csv\n"
      ]
     }
    ],
@@ -405,15 +381,6 @@
     "test_result.to_csv('../data/result_'+datetime_str+'.csv', index=False)\n",
     "print '../data/result_'+datetime_str+'.csv'"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
