--- a/lewis/ml_test_ridge_1123.ipynb
+++ b/lewis/ml_test_ridge_1123.ipynb
@@ -619,7 +619,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
