--- a/lewis/ml_test_blending_1123.ipynb
+++ b/lewis/ml_test_blending_1123.ipynb
@@ -16,8 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "# Sklearn\n",
     "from sklearn.preprocessing import StandardScaler, Imputer \n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.cross_validation import cross_val_score, ShuffleSplit\n",
@@ -117,10 +116,11 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "base1 = RandomForestRegressor(n_estimators=800, max_features='sqrt', max_depth=5, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
+    "base1 = RandomForestRegressor(n_estimators=500, max_features=0.2, max_depth=25, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
     "base2 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6)\n",
     "base3 = LinearRegression()\n",
-    "base4 = Ridge()\n",
+    "base4 = Ridge(alpha=2.0)\n",
+    "base5 = Lasso(alpha=0.01)\n",
     "blender = LinearRegression()\n",
     "clf = BlendedRegressor(base_models=(base1, base2, base3, base4), blending_model=blender, blending_split=10)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
@@ -164,7 +164,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
