--- a/lewis/ml_test_nn_1123.ipynb
+++ b/lewis/ml_test_nn_1123.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -37,15 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# trn = pd.read_csv('../data/train.csv')\n",
-    "# trn = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is DataFrame index\n",
-    "trn = pd.read_csv('../data/train_1.csv', index_col=0)"
+    "trn = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is DataFrame index\n",
+    "# trn = pd.read_csv('../data/train_1.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 0.0395 secs\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time.time()\n",
+    "trn_withRef = trn[trn['Ref'].notnull()]\n",
+    "print 'Time elapsed: {:.4f} secs'.format(time.time()-t)  # toc"
    ]
   },
   {
@@ -59,28 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.0087 secs\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = time.time()\n",
-    "trn_withRef = trn[trn['Ref'].notnull()]\n",
-    "print 'Time elapsed: {:.4f} secs'.format(time.time()-t)  # toc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time elapsed: 0.3985 secs\n"
+      "Time elapsed: 2.3555 secs\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60376, 132) (60376,)\n"
+      "(405691, 132) (405691,)\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -126,7 +126,7 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf = KNeighborsRegressor(n_neighbors=5, weights='uniform', p=2)\n",
+    "clf = KNeighborsRegressor(n_neighbors=5, weights='uniform', p=2, n_jobs=5)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
@@ -142,20 +142,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.3min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.4min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.6min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.4min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.4min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.9min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 9.2min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.8min\n",
+      "[CV] no parameters to be set .........................................\n",
+      "[CV] ................................ no parameters to be set - 8.0min\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 85.2min finished\n"
+     ]
+    }
+   ],
    "source": [
     "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.4945178165 1.11862068229\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', KNeighborsRegressor(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "          metric_params=None, n_jobs=5, n_neighbors=5, p=2,\n",
+       "          weights='uniform'))])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print np.mean(scores), np.std(scores)\n",
+    "pip"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
