--- a/lewis/ml_test_blending_1123.ipynb
+++ b/lewis/ml_test_blending_1123.ipynb
@@ -58,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.3525 secs\n"
+      "Time elapsed: 0.3482 secs\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 6.9981 secs\n"
+      "Time elapsed: 6.9398 secs\n"
      ]
     }
    ],
@@ -96,12 +96,21 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(731556, 132) (731556,)\n"
+     ]
+    }
+   ],
    "source": [
     "X = trn_withRef_comb.loc[:, 'minutes_past_mean':'Kdp_5x5_90th_max']  # NOTE: used range slicing on column\n",
-    "y = trn_withRef_comb['Expected_mean']"
+    "y = trn_withRef_comb['Expected_mean']\n",
+    "print X.shape, y.shape"
    ]
   },
   {
@@ -122,7 +131,7 @@
     "base4 = Ridge(alpha=2.0)\n",
     "base5 = Lasso(alpha=0.01)\n",
     "blender = LinearRegression()\n",
-    "clf = BlendedRegressor(base_models=(base1, base2, base3, base4), blending_model=blender, blending_split=10)\n",
+    "clf = BlendedRegressor(base_models=(base1, base2, base3, base4, base5), blending_model=blender, blending_split=10)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
@@ -140,19 +149,15 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "cleaning.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  X.drop(indices, inplace=True)\n",
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 75.2min finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 168.4min finished\n"
      ]
     }
    ],
@@ -164,7 +169,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -189,6 +194,86 @@
    ],
    "source": [
     "print np.mean(scores), np.std(scores)\n",
+    "print pip.get_params()['steps']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.0912481243 1.58129656429\n",
+      "[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+      "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', BlendedRegressor(base_models=(RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=25,\n",
+      "           max_features=0.2, max_leaf_nodes=None, min_samples_leaf=1,\n",
+      "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+      "           n_estimators=500, n_jobs=7, oob_score=False, random_state=None,\n",
+      "           ...ve=False, precompute=False, random_state=None,\n",
+      "   selection='cyclic', tol=0.0001, warm_start=False)),\n",
+      "         blending_model=LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+      "         blending_split=10))]\n",
+      "BlendedRegressor(base_models=(RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=25,\n",
+      "           max_features=0.2, max_leaf_nodes=None, min_samples_leaf=1,\n",
+      "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+      "           n_estimators=500, n_jobs=7, oob_score=False, random_state=None,\n",
+      "           ...ve=False, precompute=False, random_state=None,\n",
+      "   selection='cyclic', tol=0.0001, warm_start=False)),\n",
+      "         blending_model=LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+      "         blending_split=10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.mean(scores), np.std(scores)\n",
+    "print pip.get_params()['steps']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.0919306961 1.58147287945\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('ttf', TargetThresholdFilter(threshold=45)),\n",
+       " ('lpo', LogPlusOne()),\n",
+       " ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "      verbose=0)),\n",
+       " ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)),\n",
+       " ('clf',\n",
+       "  BlendedRegressor(base_models=(RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=25,\n",
+       "             max_features=0.2, max_leaf_nodes=None, min_samples_leaf=1,\n",
+       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "             n_estimators=500, n_jobs=7, oob_score=False, random_state=None,\n",
+       "             ...fit_intercept=True, max_iter=None,\n",
+       "     normalize=False, random_state=None, solver='auto', tol=0.001)),\n",
+       "           blending_model=LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+       "           blending_split=10))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print np.mean(scores), np.std(scores)\n",
     "pip.get_params()['steps']"
    ]
   },
@@ -201,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -209,12 +294,12 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f846dca14d0>), ('lpo', <cleaning.LogPlusOne object at 0x7f846dca18d0>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...egression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', BlendedRegressor(base_models=(RandomForestRegressor(boo...egression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
        "         blending_split=10))])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -241,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -250,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151122_015933.csv\n"
+      "../data/result_20151125_092807.csv\n"
      ]
     }
    ],
@@ -270,6 +355,15 @@
     "test_result.to_csv('../data/result_'+datetime_str+'.csv', index=False)\n",
     "print '../data/result_'+datetime_str+'.csv'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
