--- a/lewis/ml_test_rf_1122.ipynb
+++ b/lewis/ml_test_rf_1122.ipynb
@@ -188,7 +188,7 @@
    ],
    "source": [
     "print np.mean(scores), np.std(scores)\n",
-    "pip"
+    "pip.get_params()['steps']"
    ]
   },
   {
@@ -1218,18 +1218,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=45)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', RandomForestRegressor(bootstrap=True, criterion='mse', ...imators=500, n_jobs=6, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pip.fit(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -1245,11 +1258,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../data/result_20151124_133143.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Ref-samples\n",
     "test_result_withRef = pd.DataFrame()\n",
