--- a/lewis/ml_test_blending_1123.ipynb
+++ b/lewis/ml_test_blending_1123.ipynb
@@ -58,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.3482 secs\n"
+      "Time elapsed: 0.3516 secs\n"
      ]
     }
    ],
@@ -79,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 6.9398 secs\n"
+      "Time elapsed: 6.9771 secs\n"
      ]
     }
    ],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -131,11 +131,11 @@
     "base4 = Ridge(alpha=2.0)\n",
     "base5 = Lasso(alpha=0.01)\n",
     "blender = LinearRegression()\n",
-    "clf = BlendedRegressor(base_models=(base1, base2, base3, base4, base5), blending_model=blender, blending_split=10)\n",
+    "clf = BlendedRegressor(base_models=(base1, base2, base3, base4, base5), blending_model=blender, blending_split=0.1)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
-    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric"
+    "scorer = make_scorer(LogPlusOne_score, greater_is_better=False)  # define scoring metric"
    ]
   },
   {
@@ -147,54 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 168.4min finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.1830256276 1.58302032266\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f846dca14d0>), ('lpo', <cleaning.LogPlusOne object at 0x7f846dca18d0>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...egression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
-       "         blending_split=10))])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print np.mean(scores), np.std(scores)\n",
-    "print pip.get_params()['steps']"
+    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=2)"
    ]
   },
   {
@@ -230,51 +190,32 @@
     }
    ],
    "source": [
+    "# ttf = TargetThresholdFilter(threshold=45)\n",
+    "# base1 = RandomForestRegressor(n_estimators=500, max_features=0.2, max_depth=25, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
+    "# base2 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6) # base3 = LinearRegression()\n",
+    "# base4 = Ridge(alpha=2.0) # base5 = Lasso(alpha=0.01) # blender = LinearRegression()\n",
+    "# clf = BlendedRegressor(base_models=(base1, base2, base3, base4, base5), blending_model=blender, blending_split=10)\n",
+    "# pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "print np.mean(scores), np.std(scores)\n",
     "print pip.get_params()['steps']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.0919306961 1.58147287945\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('ttf', TargetThresholdFilter(threshold=45)),\n",
-       " ('lpo', LogPlusOne()),\n",
-       " ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "      verbose=0)),\n",
-       " ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)),\n",
-       " ('clf',\n",
-       "  BlendedRegressor(base_models=(RandomForestRegressor(bootstrap=True, criterion='mse', max_depth=25,\n",
-       "             max_features=0.2, max_leaf_nodes=None, min_samples_leaf=1,\n",
-       "             min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "             n_estimators=500, n_jobs=7, oob_score=False, random_state=None,\n",
-       "             ...fit_intercept=True, max_iter=None,\n",
-       "     normalize=False, random_state=None, solver='auto', tol=0.001)),\n",
-       "           blending_model=LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
-       "           blending_split=10))]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# ttf = TargetThresholdFilter(threshold=45)\n",
+    "# base1 = RandomForestRegressor(n_estimators=500, max_features=0.2, max_depth=25, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
+    "# base2 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6)# base3 = LinearRegression()\n",
+    "# base4 = Ridge(alpha=2.0)# base5 = Lasso(alpha=0.01)# blender = LinearRegression()\n",
+    "# clf = BlendedRegressor(base_models=(base1, base2, base3, base4, base5), blending_model=blender, blending_split=0.1)\n",
+    "# pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "print np.mean(scores), np.std(scores)\n",
-    "pip.get_params()['steps']"
+    "print pip.get_params()['steps']"
    ]
   },
   {
