--- a/Pranav/rainPredict_v3_maxmin.ipynb
+++ b/Pranav/rainPredict_v3_maxmin.ipynb
@@ -85,7 +85,7 @@
    "outputs": [],
    "source": [
     "# ignore id's where all Ref vales are NaN\n",
-    "trn_mean = trn_mean[pd.notnulla(trn_mean.Ref_mean)]"
+    "trn_mean = trn_mean[pd.notnull(trn_mean.Ref_mean)]"
    ]
   },
   {
